[tool.poetry]
name = "network-coverage-api"
version = "0.1.0"
description = "API endpoint to obtain network coverage data for common street adresses"
authors = ["florianabel <mail@florianabel.com>"]
readme = "README.md"
packages = [{include = "network_coverage_api"}]

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pyproj = "^3.6.1"
requests = "^2.31.0"
pandas = "^2.1.1"
geopy = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
